--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
